--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "LICENSE"
   ],
   "dependencies": {
-    "quill": "^0.20.0"
+    "anfix/quill": "^0.20.0"
   },
   "peerDependencies": {
     "react": ">=0.11.0"
