--- a/package.json
+++ b/package.json
@@ -36,10 +36,15 @@
     "LICENSE"
   ],
   "dependencies": {
-    "quill": "^0.20.0"
+    "create-react-class": "^15.0.0",
+    "quill": "^0.20.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "prop-types": "^15.0.0"
   },
   "peerDependencies": {
-    "react": ">=0.11.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "devDependencies": {
     "blanket": "^1.1.6",
@@ -47,7 +52,6 @@
     "jshint": "^2.5.10",
     "mocha": "^2.0.1",
     "mocha-text-cov": "^0.1.0",
-    "react": "^0.12.0",
     "should": "^4.3.0",
     "sinon": "^1.12.1",
     "travis-cov": "^0.2.5",
